--- a/references.bib
+++ b/references.bib
@@ -653,3 +653,16 @@ Section: Entrepreneurs},
 	note = {Library Catalog: grpc.io},
 	file = {Snapshot:/Users/eddie/Zotero/storage/53GSXFS5/grpc.io.html:text/html}
 }
+
+@inreference{service-level-agreement_2020,
+	title = {Service-Level-Agreement},
+	rights = {Creative Commons Attribution-{ShareAlike} License},
+	url = {https://de.wikipedia.org/w/index.php?title=Service-Level-Agreement&oldid=200079846},
+	abstract = {Ein Service-Level-Agreement ({SLA}; deutsch Dienstleistungs-Güte-Vereinbarung) bezeichnet einen Rahmenvertrag bzw. die Schnittstelle zwischen Auftraggeber und Dienstleister für wiederkehrende Dienstleistungen.},
+	booktitle = {Wikipedia},
+	urldate = {2020-06-29},
+	date = {2020-05-18},
+	langid = {german},
+	note = {Page Version {ID}: 200079846},
+	file = {Snapshot:/Users/eddie/Zotero/storage/EA9MFLH7/index.html:text/html}
+}
