--- a/sections/Anhang/rahles.tex
+++ b/sections/Anhang/rahles.tex
@@ -149,7 +149,7 @@ E: Ja, okay. Sind deiner Meinung nach innerhalb einer Microservicearchitektur Si
 R: Sicherheit gehört für mich zu den Grundvoraussetzungen. Egal über welche Architektur wir reden. Das ist auch wieder eine Sache, die hat für mich nichts mit Architektur zu tun. Ich möchte  die Infrastruktur eines Monolithen genauso sicher haben wie bei meinem Microservices. 
 
 \label{appendix:r-33}
-R: Davon losgelöst wenn man darüber nachdenkt, dass es vielleicht mehr als ein und hat zwei Anwendungen erstellt werden, dann kommen Aspekte wie Betriebssicherheit dazu. Also welche LSAs, bzw. welche Garantien geben sich Anwendungen, nicht nur für Schnittstellenkonformität, auf der einen Seite, sondern auch für Uptime, Erreichbarkeit und Geschwindigkeit. Sprich wie viele Requests kann ich machen bevor irgendwelche Lastspitzen erreicht werden. Habe ich die Möglichkeit, mit einem exponential backoff auch Request zurückzunehmen oder zu sagen: “Du darfst jetzt erstmal nicht mehr mit mir reden”, ohne das ganze System auseinander bricht? Das sind Dinge, die ich nicht mehr unter Sicherheit sehe, sondern eher als Betriebssicherheit zähle.
+R: Davon losgelöst wenn man darüber nachdenkt, dass es vielleicht mehr als ein und hat zwei Anwendungen erstellt werden, dann kommen Aspekte wie Betriebssicherheit dazu. Also welche SLAs, bzw. welche Garantien geben sich Anwendungen, nicht nur für Schnittstellenkonformität, auf der einen Seite, sondern auch für Uptime, Erreichbarkeit und Geschwindigkeit. Sprich wie viele Requests kann ich machen bevor irgendwelche Lastspitzen erreicht werden. Habe ich die Möglichkeit, mit einem exponential backoff auch Request zurückzunehmen oder zu sagen: “Du darfst jetzt erstmal nicht mehr mit mir reden”, ohne das ganze System auseinander bricht? Das sind Dinge, die ich nicht mehr unter Sicherheit sehe, sondern eher als Betriebssicherheit zähle.
 
 \label{appendix:r-34}
 R: Auch stellt sich die Frage ob Services untereinander so abgestimmt, dass eine Team, im Zweifel weiß das nur 1000 Requests pro Sekunde auf ein anderen Service gesendet werden darf und danach vielleicht ein Fehlercode kurz bekommt. Sind diese Überlastungssicherheitsmaßnahmen eingeführt oder nicht?
