--- a/sections/Methodik/ergebnisse/frage5.tex
+++ b/sections/Methodik/ergebnisse/frage5.tex
@@ -1,4 +1,5 @@
 \subsubsection{Frage 5}
+\label{sec:frage5}
 
 \textit{Mit Ihrem aktuellen Wissensstand, welche Softwarearchitektur empfehlen Sie PluraPolit?}
 
@@ -10,4 +11,4 @@ Sowohl Herr Rahles, als auch Herr Troppman gaben an, dass sie einen Monolithen e
 \textit{\enquote{Ich glaube, dass es keine separate Business Domain gibt, wo man sagt, die muss zwangsläufig ausgelagert werden.}} (siehe \combref{appendix:r-40}); \textit{\enquote{Ich sehe da vom fachlichen her nichts, was eine Microservicearchitektur rechtfertigt.}} (siehe \combref{appendix:t-37})
 }
 
-Des Weiteren stand Herr Rahles der Umstellung zu Microservices ablehnend gegenüber, da nicht genügend Entwickler vorhanden waren (siehe \combref{appendix:r-39}).
+Des Weiteren stand Herr Rahles der Umstellung zu Microservices ablehnend gegenüber, da nicht genügend Entwickler vorhanden sind (siehe \combref{appendix:r-39}).
