--- a/sections/Theory/Produktmarketfit.tex
+++ b/sections/Theory/Produktmarketfit.tex
@@ -1,7 +1,7 @@
 \subsection{Start-up}
 \label{sec:start-up}
 
-Wie in \cref{sec:ddd} aufgezeigt, sind Softwarearchitektur und Geschäftsprozesse ent mit einander verbunden. So soll an dieser Stelle der Arbeit zum Verständnis des Ausmaßes der Umstellung, die Situation eines Start-up beleuchtet werden, da \textit{\enquote{hart zu verändernde Entscheidungen}}\footnote{Direkter Bezug zur Definition von Martin Fowler aus \cref{sec:software-architect-definition}.} stets im Kontext der Unternehmenssituation getroffen werden sollten.
+Wie in \cref{sec:ddd} aufgezeigt, sind Softwarearchitektur und Geschäftsprozesse eng mit einander verbunden. So soll an dieser Stelle der Arbeit zum Verständnis des Ausmaßes der Umstellung, die Situation eines Start-up beleuchtet werden, da \textit{\enquote{hart zu verändernde Entscheidungen}}\footnote{Direkter Bezug zur Definition von Martin Fowler aus \cref{sec:software-architect-definition}.} stets im Kontext der Unternehmenssituation getroffen werden sollten.
 
 Nach dem Wirtschaftslexikon Gabler ist ein Start-up, oder auch Start-up-Unternehmen, ein junges, noch nicht etabliertes Unternehmen, welches eine innovative Geschäftsidee verwirklichen möchte \parencite[vgl.][]{achleitner_start-up_2018}. Ein Start-up agiert in einem jungen oder noch nicht existierenden Markt und muss erst ein funktionierendes Geschäftsmodell entwickeln. Wird ein solches gefunden und implementiert, gilt das Unternehmen nicht mehr als Start-up \parencite[vgl.][]{wiki_start-up-unternehmen_2020}.
 
