Fazit wurde eingefuegt und das logo in der start seite eingefuegt

--- a/sections/Anhang/schlaak.tex
+++ b/sections/Anhang/schlaak.tex
@@ -137,7 +137,7 @@ S:  Also womit ich sehr gute Erfahrungen gemacht habe, ist tatsächlich eine Arc
 S: Dieses Backend gibt die Daten dann über eine sehr flexible API heraus. Aktuell bin ich ein riesen Fan von GraphQL. Ich hab es in vier Projekten hintereinander eingesetzt und bin noch nicht an irgendwelche Probleme gestoßen. An ein paar Unschönheiten aber im Vergleich zu REST ist es unfassbar angenehm. 
 
  \label{appendix:s-33}
-S: Ja und dann ein modernes JavaScript Framework im Frontend, welches von einer breiten Community unterstützt wird. Da fallen mir nur Vue und React ein. Im Backend, bin ich relativ frei. Das ist natürlich eine reine Geschmackssache. Ich selber baue immer noch gerne Monolithen mit Rails, bin nutze aber auch gerne zwei JavaScript Alternativen. Das eine wäre Node basiert, das andere wäre tatsächlich dann eher eine Serverless-Architektur, wo man dann ein bestehenden Service wie Contentful einsetzt. 
+S: Ja und dann ein modernes JavaScript Framework im Frontend, welches von einer breiten Community unterstützt wird. Da fallen mir nur Vue und React ein. Im Backend, bin ich relativ frei. Das ist natürlich eine reine Geschmackssache. Ich selber baue immer noch gerne Monolithen mit Rails, nutze aber auch gerne zwei JavaScript Alternativen. Das eine wäre Node basiert, das andere wäre tatsächlich dann eher eine Serverless-Architektur, wo man dann ein bestehenden Service wie Contentful einsetzt. 
 
  \label{appendix:s-34}
 S: Wenn es möglich ist, würde ich gerade bei kleineren Projekten fast komplett auf das Backend verzichten.
