--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -2,7 +2,7 @@
 
 Die drei Experten wurden eine Woche vor dem Interview per Nachricht (Slack, oder WhatsApp) kontaktiert und zu einem Gespräch eingeladen, welches online stattfinden sollte. Es wurde ein Konferenzgespräch von Angesicht zu Angesicht gewählt, um eine persönlichere Atmosphäre zu generieren und gleichzeitig die Kontaktbeschränkungen in der Coronapandemie einzuhalten. Hinzu kam, dass Herr Troppman in München wohnte und ein Gespräch nur online möglich war.
 
-Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in der Bachelor Thesis verwendet werden dürfen.
+Alle Interviewpartner bekamen die Fragen zur Vorbereitung vorab zugeschickt. Sie wurden vor dem Gespräch in Kenntnis gesetzt, dass dieses aufgezeichnet wird, um die anschließende Transkripierung zu vereinfachen. Dies geschah zum einen während der Absprachen eine Woche vor den Interviews, sowie unmittelbar vor der Aufnahme. Des Weiteren gaben die Experten eine mündliche Bestätigung ab, dass ihre Aussagen in der Bachelorarbeit verwendet werden dürfen.
 
 Um während des Interviews Rückfragen zu stellen, wurden zusätzlich zur laufenden Aufzeichnung kurze Notizen erstellt.
 
