--- a/sections/Methodik/ergebnisse/frage5.tex
+++ b/sections/Methodik/ergebnisse/frage5.tex
@@ -3,7 +3,7 @@
 
 \textit{Mit Ihrem aktuellen Wissensstand, welche Softwarearchitektur empfehlen Sie PluraPolit?}
 
-Alle drei Experten empfolen einen Monolithen (siehe \combref{appendix:t-36}, \combref{appendix:t-38} und \combref{appendix:s-31}).
+Alle drei Experten empfolen einen Monolithen (siehe \combref{appendix:r-38}, \combref{appendix:t-36} und \combref{appendix:s-31}).
 
 Alexander Troppman und Sebastian Schlaak haben weiterführend geraten, das Backend und das Frontend voneinander zu trennen. Herr Schlaaks Vorschlag war es, im Frontend ein \textit{\enquote{modernes JavaScript Framework}} zu verwenden und das \textit{\enquote{Backoffice}} der Mitarbeiter von der Darstellung der Endkunden zu trennen (siehe \combref{appendix:s-36}). Beide würden den Ansatz wählen, um die Flexibilität zu haben das Frontend bzw. das Backend auszutauschen.
 
