--- a/sections/start.tex
+++ b/sections/start.tex
@@ -1,8 +1,12 @@
 \begin{titlepage}
 \begin{center}
 
+\includegraphics[width=5cm,right]{Assets/TH-Wildau-Logo_rgb}
+
+\vspace{1cm}
+
 \textbf{\huge
-Bachelor Thesis
+Bachelorarbeit
 }
 \vspace{1.3cm}
 		
