--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
 %Für quots
 \usepackage[autostyle=true, german=quotes]{csquotes}
 
+
 %Für Abbildungen
 \usepackage{graphicx}
 
@@ -25,6 +26,9 @@
       justification=RaggedRight,
       singlelinecheck=false]
      {caption}
+     
+%Dieses Package regelt das Images auch rechts oder links bündig angezeigt werden.
+\usepackage[export]{adjustbox}
     
 % Zum Einfügen von leeren Seiten
 \usepackage{afterpage}
@@ -66,7 +70,7 @@
 \newpage
 \pagenumbering{Roman}
 
-\section*{Abstract}
+\input{sections/Abstract}
 
 \newpage
 
