--- a/sections/Auswertung.tex
+++ b/sections/Auswertung.tex
@@ -1,46 +1,48 @@
 \section{Diskussion der Interviewergebnisse}
 \label{sec:auswertung}
 
-Um die Bedingungen aus \cref{sec:bedingungen} zu bestätigen oder zu widerlegen, wurden drei Interviews mit Experten aus dem Start-up-Branche geführt.
+Um die Bedingungen aus \cref{sec:bedingungen} zu bestätigen oder zu widerlegen, wurden drei Interviews mit Experten aus der Start-up-Branche geführt.
 
-Die Interviewergebnisse zeigen, dass Microservices eine zugrundeliegende inhaltliche Trennung benötigt (siehe \cref{sec:frage1}) und die Vielseitigkeit des Unternehmens die Entscheidung zur Umstellung beeinflusst. Dieses Ergebnis bestätigt sich, da aufgrund der mangelten separaten Geschäftsdomäne, ausschließlich eine monolithische Architektur empfohlen wurde (siehe \cref{sec:frage5}).
+Die Interviewergebnisse zeigen, dass Microservices eine zugrundeliegende inhaltliche Trennung benötigen (siehe \cref{sec:frage1}) und die Vielseitigkeit des Unternehmens die Entscheidung für eine Umstellung beeinflusst. Bestätigt wurde dies, da Herr Rahles und Herr Troppman den Mangel einer separaten Geschäftsdomäne betonten (siehe \cref{sec:frage5}).
 
-Aus der Literaturrecherche geht hervor, dass Services anhand der Geschäftsprozesse geteilt werden, welches sich aus dem Domain Driven Design ableitet (siehe \cref{sec:ddd}). Folglich bedarf eine Microservicearchitektur eine Vielzahl an trennbaren Geschäftsprozessen.
+\label{sec:vielseitigkeit}
+Damit bekräftigen die Interviewergebnisse die Annahme, aus \cref{sec:ddd}, dass Services anhand der Geschäftsprozesse geteilt werden und bestätigen den Ansatz, dass ein System eine gewisse Vielseitigkeit benötigt, bevor es in einzelne Services geteilt werden kann.
 
-Damit bekräftigen die Interviewergebnisse die Annahme, dass Microservices anhand der Geschäftsprozesse geteilt werden und bestätigen den Ansatz, dass ein System eine gewisse Vielseitigkeit benötigt, bevor es in einzelne Services geteilt werden kann.
-
-Die Interviewergebnisse zeigen, dass eine Microservicearchitektur eine komplexe Angelegenheit ist. So nannten die Experten Monitoring, Fehlermanagement und ein automatischen Integrations- und Deployment-Prozess 
-Vorraussetzungen für die Umsetzung. Auch fügte Christoph Rahles in seinem Interview hinzu, dass wenn \textit{\enquote{mehr als ein oder zwei Anwendungen [hinzukommen], [...] Aspekte wie Betriebssicherheit [wichtiger werden]}} (siehe \combref{appendix:r-33}). Er zählte darunter SLAs\footnotemark und Garantien zur Uptimes, Erreichbarkeiten und Geschwindigkeit von Services.
+Die Interviewergebnisse zeigen weiter, dass eine Microservicearchitektur eine komplexe Angelegenheit ist. So setzten die Experten Monitoring, Fehlermanagement und ein automatischen Integrations- und Deployment-Prozess 
+ für die Umsetzung voraus. Auch fügte Christoph Rahles in seinem Interview hinzu, dass wenn \textit{\enquote{mehr als ein oder zwei Anwendungen [hinzukommen], [...] Aspekte wie Betriebssicherheit [wichtiger werden]}} (siehe \combref{appendix:r-33}). Er zählte darunter SLAs\footnotemark und Garantien zur Uptimes, Erreichbarkeiten und Geschwindigkeit von Services.
 \footnotetext{SLA steht für Server-Level-Agreement und bezeichnet den Rahmenvertrag zwischen Auftraggeber und Dienstleister für Dienstleistungen und wird vor allem bei Outsourcing-Projekten verwendet \parencite{service-level-agreement_2020}.}
 
-Die Ergebnisse spiegeln den Anstieg der Komplexität wieder, welcher in \cref{sec:verteilte-systeme} über verteilte Systeme angesprochen wird. Der Vergleich zwischen den Architekturstilen aus \cref{sec:monolith} zeigt, dass monolithische Systeme besonders den Bereitstellungsprozess, das Fehlermanagement und die systemübergreifende Tests vereinfachen. Daraus lässt sich schlussfolgern, dass eine Microservicearchitektur im Vergleich zu einem Monolithen komplexer ist, welches sich mit der Empfehlung zu einem Monolithen deckt (siehe \cref{sec:frage5}).
+Die Ergebnisse belegen den Anstieg der Komplexität, welcher in \cref{sec:verteilte-systeme} über verteilte Systeme angesprochen wird. Der Vergleich zwischen den Architekturstilen aus \cref{sec:monolith} zeigt, dass monolithische Systeme besonders den Bereitstellungsprozess, das Fehlermanagement und die systemübergreifende Tests vereinfachen. Daraus lässt sich schlussfolgern, dass eine Microservicearchitektur im Vergleich zu einem Monolithen komplexer ist. Dies deckt sich mit den Empfehlungen der Experten (siehe \cref{sec:frage5}).
 
-Der Anstieg der Komplexität impliziert, dass ein tieferes Verständnis über das Erstellen und Managen der Infrastruktur vorhanden sein muss.
+Der Anstieg der Komplexität schließt ein tieferes Verständnis über das Erstellen und Managen der Infrastruktur ein und fordert, abhängig des Wissenstands im Unternehmen, Weiterbildungen durchzuführen oder auf externe Fachkräften zurückzugreifen.
 
-Aus den Interviews geht hervor, dass wie für jedes Netzwerk Sicherheit eine Grundvoraussetzung ist, sowie die Fähigkeit Nachrichten zwischen Services auszutauschen. Dies bestätigt die angenommene Vorraussetzungen an das Netzwerk (sieht \cref{sec:bedingungen}). Datendurchsatz wurde von keinem Experten angesprochen. Dies kann darauf zurück zu führend sein, dass wie Sicherheit, es als Grundvoraussetzung gesehen wurde. Gleichwohl entkräftet es die Bedeutung des Datendurchsatz als Bedingung.
+\label{sec:netzwerk}
+Aus den Interviews geht hervor, dass Sicherheit und der Austausch von Nachrichten eine Grundvoraussetzung für jedes Netzwerk ist. Dies bestätigt die angenommene Vorraussetzungen an das Netzwerk (siehe \cref{sec:bedingungen}). Datendurchsatz wurde von keinem Experten angesprochen. Dies kann man darauf zurückzuführen, dass Datendurchsatz als Grundvoraussetzung gesehen wird und keine explizite Voraussetzung für Microservices ist.
 
-Die Ergebnisse aus den Interviews wiesen deutlich darauf hin, dass der wirtschaftliche Nutzen ein wesentliche Voraussetzung ist (siehe \cref{sec:frage1}) und die Umstellung im Kontext der wirtschaftlichen Situation entscheiden werden sollte (siehe \cref{sec:frage4}). Somit bestätigen die Aussagen die ursprüngliche Annahme, dass die Wirtschaftliche Situation die Entscheidung beeinflusst (siehe \cref{sec:start-up}).
+Wiederum verdeutlichten die Interviewergebnisse den wirtschaftlichen Nutzen und forderten die Umstellung im Kontext der wirtschaftlichen Situation zu entscheiden (siehe \cref{sec:frage4}). Somit bestätigen die Aussagen die ursprüngliche Annahme, dass die wirtschaftliche Situation die Entscheidung beeinflusst (siehe \cref{sec:start-up}).
 
-Aus der Literaturrecherche geht hervor, dass eine Microservicearchitektur erst nach dem Produkt-Market-Fit umgesetzt werden sollte. Die Interviews zeigten, dass auch Start-ups Microservices einsetzen, um flexibel einzelne Services auszutauschen (siehe \cref{sec:frage4}). Aus der Tatsache heraus, dass sich Microservices an Geschäftsprozesse richten, kann geschlussfolgert werden, dass angenommen wird, dass die ursprüngliche Geschäftsprozesse bestehen bleiben und ausschließlich der Services verändert wird. Wie jedoch \cref{sec:start-up} zeigt, agiert ein Start-up in einem unbestimmten Markt, sodass nicht davon auszugehen ist, dass Geschäftsprozesse bestehen bleiben. Demnach widerspricht der Ansatz des dynamischen Geschäftsprozessen der Verwendung von Microservices. Eine Annahme, die durch die Empfelung eine monolitischen Softwarearchitektur bestätigt wurde (siehe \cref{sec:frage5}).
+Die Literaturrecherche belegt, dass eine Microservicearchitektur erst nach dem Produkt-Market-Fit umgesetzt werden sollte. Die Interviews zeigten jedoch, dass auch Start-ups Microservices einsetzen. Dies wird getan, um flexibel einzelne Services auszutauschen (siehe \cref{sec:frage4}). Aus der Tatsache heraus, dass sich Microservices an Geschäftsprozesse richten, kann geschlussfolgert werden, dass die ursprünglichen Geschäftsprozesse bestehen bleiben und ausschließlich der Services verändert wird.
 
-Gleichwohl bleibt die Aussage bestehen, dass es Situationen gibt, in denen trotz Ungewissheit der Geschäftsidee einen wirtschaftlich Mehrwert gibt, eine Microservicearchitektur einzufügen. Eine dieser Szenarien wurde von Alexander Troppman angesprochen. Er beschrieb die Situation, in der Microservices gewählt wurden, um vorhandene Entwickler effizient einzusetzen (siehe \combref{appendix:t-6}).
+Wie jedoch \cref{sec:start-up} zeigt, agiert ein Start-up in einem unbestimmten Markt, sodass nicht davon auszugehen ist, dass Geschäftsprozesse bestehen bleiben. Demnach widersprechen dynamische Geschäftsprozesse den Einsatz von Microservices. Eine Annahme, die durch die Empfehlungen der monolitischen Softwarearchitektur bestätigt wird (siehe \cref{sec:frage5}).
 
-Die Interviewergebnisse verwerfen somit den Gedanken, dass ein Produkt-Market-Fit vorhanden sein muss und relativeren es auf den wirtschaftlichen Mehrwert.
+Gleichwohl gibt es Situationen, in denen die Einführung von Microservices einen wirtschaftlich Mehrwert generieren kann, obwohl noch kein Produkt-Market-Fit vorliegt. Eine dieser Szenarien wurde von Alexander Troppman angesprochen. Er beschrieb die Situation, in der Microservices gewählt wurden, um vorhandene Entwickler effizient einzusetzen (siehe \combref{appendix:t-6}).
 
-Wie die Interviewergebnisse zeigten ist die Komplexität eines Systems die größte Motivation dieses in Microservices umzustellen. Um jedoch eine erfolgreiche Umstellung zu vollziehen, bedarf es Kenntnisse über den Aufbau der Infrastruktur und Verwaltung dieser. Auf der einen Seite können abhängig der Ressourcen des Unternehmens dadurch Kosten entstehen, wobei auf der anderen Seite durch den die Umstellung ein Mehrwert generiert wird.
+\label{sec:wirtschaftlich}
+Die Interviewergebnisse verwerfen somit den Gedanken, dass ein Produkt-Market-Fit vorhanden sein muss und relativeren es auf den zu erwartenden wirtschaftlichen Mehrwert.
 
-Übertrifft der prognostizierte Mehrwert die Kosten der Umstellung, ist es sicher zu sagen, dass sich die Umstellung zu Microservices wirtschaftlich lohnt.
+Wie die Interviewergebnisse zeigen, ist die Komplexität eines Systems die größte Motivation Microservices einzuführen. Gleichzeitig bedarf die Umstellung zu Microservices Kenntnisse über den Aufbau und Verwaltung der Infrastruktur. Dadurch können Kosten für das Unternehmen entstehen. Auf der anderen Seite verspricht sich das Unternehmen durch die Umstellung ein Verbesserung der aktuellen Situation. Übertrifft der prognostizierte Mehrwert die Kosten der Umstellung, ist die Umstellung wirtschaftlich.
 
-Aus den Antworten zu Frage fünf geht hervor, dass alle drei Experten in erster Line ein Monolithen empfehlen. Weiterführend schlugen Herr Schlaak und Herr Troppman die Trennung zwischen Front- und Backend vor.
-Da es sich jedoch nur solange um ein Monolithen handelt, wie ein einheitlicher Depolyment-Prozess vorhanden ist, sprechen Herr Schlaak und Herr Troppman nicht mehr über einen Monolith.
-Microservices auf der anderen Seite liegen erst vor, wenn die Services eigenständig sind. \cref{sec:microservices} entsprechend ist dies erst der Fall, wenn der Services eine eigene Datenverwaltung besitzt.
+Aus den Antworten zur Frage fünf geht hervor, dass alle drei Experten in erster Line einen Monolithen empfehlen. Dies lässt sich darauf zurückführen, dass die Experten, aufgrund der geringen Komplexität von PluraPolit, keine Notwendigkeit sehen, Microservices umzusetzen und sie bei der geringen Anzahl an Entwickler eine verantwortungsvolle Verwaltung der Infrastruktur anzweifelen. Folglich bewerten sie die Umstellung für PluraPolit als nicht lukrativ.
 
-Bei der angesprochenden Trennung ist dies jedoch auch nicht der Fall. Folglich handelt es sich bei dem Vorschlag weder um ein Monolithen noch um ein Microservice. Es handelt sich um ein verteiltes System bestehend aus zwei Komponenten, die voneinander abhängigen.
+Neben der Empfehlung zu einem Monolithen schlugen Herr Schlaak und Herr Troppman die Trennung zwischen Front- und Backend vor.
+Da es sich jedoch nur solange um ein Monolithen handelt, wie ein einheitlicher Depolyment-Prozess vorhanden ist, handelt es sich bei der vorgeschlagenden Architektur nicht mehr um einen Monolithen.
+%Wie kann es sein, dass die Experten es nicht wussten, dass es kein Monolith ist?
+Microservices auf der anderen Seite liegen erst vor, wenn die Services eigenständig sind. \cref{sec:microservices} entsprechend ist dies erst der Fall, wenn der Services eine eigene Datenverwaltung besitzen. Dies wiederum bei der angesprochenen Trennung nicht der Fall ist. Folglich handelt es sich bei dem Vorschlag weder um ein Monolithen, noch um ein Microservice, sondern um ein verteiltes System bestehend aus zwei Komponenten, die voneinander abhängig sind.
 
-Bei der Auswertung der Ergebnisse muss berücksichtigt werden, dass sich diese ausschließlich auf Start-ups und PluraPolit fokussiert wurde. Würden etablierte Firmen oder Vereinen beleuchtet, wären die Ergebnisse möglicherweise anders. Aus diesem Grund kann keine generelle Aussage der notwendigen Bedingungen getroffen werden.
+Bei der Auswertung der Ergebnisse muss berücksichtigt werden, dass sich diese ausschließlich auf Start-ups und PluraPolit beziehen. Würden etablierte Firmen oder Vereine beleuchtet, wären die Bedingungen möglicherweise anders. Aus diesem Grund kann keine generelle Aussage getroffen werden.
 
 Auch wurden die Bedingungen aus einer Literaturrecherche erstellt, demnach wurden diese ausschließlich aus der Theory abgeleitet. Die Erfahrungen der Experten brachten Kenntnisse aus der Praxis ein und validierten die Bedingungen. 
 Gleichwohl handelte es sich um theoretisch abgeleitete Bedingungen.
-Würde eine qualitative Untersuchung der Bedingungen an Unternehmen durchgeführt, die ihre Softwarearchitektur umgestellt haben, könnten andere Ergebnisse gefunden werden.
+Würde eine qualitative Untersuchung der Bedingungen an Unternehmen durchgeführt, die ihre Softwarearchitektur umgestellt haben, könnten womöglich andere Ergebnisse gefunden werden.
 
-Empfehlungen für weitere Forschungen sind daher, eine ähnliche qualitative Untersuchung bei anderen Unternehmensarten durchzuführen und mit Hilfe einer Rekonstruktion Bedingungen von Unternehmen zu ermitteln, die Softwarearchtektur umgestellt haben.
+Empfehlungen für weitere Forschungen sind daher, eine ähnliche qualitative Untersuchung bei anderen Unternehmensarten durchzuführen und mit Hilfe einer Rekonstruktion Bedingungen von Unternehmen zu ermitteln, die bereits auf Microservices umgestellt haben.
