--- a/sections/Fazit.tex
+++ b/sections/Fazit.tex
@@ -1,31 +1,30 @@
 \section{Fazit}
 
-Ziel der Bachelorarbeit
+%Ziel der Bachelorarbeit
+Diese Bachelorarbeit hat das Ziel, die Bedingungen zu ermitteln, die für eine mögliche Umstellung für PluraPolit erforderlich sind und eine klare Bewertung für den Nutzen des Vorhaben abzugeben. Zu diesem Zweck wurden erste Bedingungen aus einer Literaturrecherche abgeleitet und von Experten innerhalb eines quantitativen Leitfadeninterviews validiert.
 
-Methodik
+%Ergebnisse
+Die Ergebnisse zeigen, dass von den neun Bedingungen aus der Literaturrecherche sechs bestätigt wurden.
+%Todo Welche Bedingungen kamen hinzu?
+Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus. Allerdings hängt diese vom zu erwartenden Mehrwert und den notwendigen Kosten ab. Entscheidend für den Mehrwert ist die Komplexität des Unternehmens. Die Kosten einer Umsetzung wurden zum einen an den zu verwendeten Ressourcen für die Infrastruktur festgehalten und an den Wissenstand der Mitarbeiter.
 
-Ergebnisse
+%Bezug zu PluraPolit
+Die Problemstellung der Arbeit verwies darauf, dass aufgrund funktionaler Abhängigkeiten die Produktivität von PluraPolit abnimmt. Es wurde davon ausgegangen, dass Microservices dieses Problem am geeignetsten löst.
+Wie die Ergebnisse jedoch zeigen, kann ebenfalls ein Monolith genutzt werden. Vielmehr steigt durch den Einsatz einer Microservicearchitektur die Komplexität und Aufwand zur Erstellung und Verwaltung der Infrastruktur.
 
-Bezug zu PluraPolit
+Die Ergebnisse haben schließlich gezeigt, dass vor der Umstellung folgende Bedingungen erfüllt sein müssen:
+\begin{enumerate}
+	\item Die Umstellung ist für ein Start-up lukrativ
+	\item Das System weist eine gewisse Komplexität auf
+	\item Die Geschäftsabläufe lassen sich voneinander trennen
+	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
+	\item Die Services können untereinander über Schnittstellen kommunizieren
+	\item Das Netzwerk ermöglicht die Kommunikation zwischen Services
+	\item Der Zugriff aufs Netzwerk ist vor Unbefugten gesichert
+\end{enumerate}
 
-Empfehlung für PluraPolit
+%Todo Beziehen auf alle Bedingungen, vor allem die Geschäftsabläufe lassen sich voneinander trennen
+Da PluraPolit keine ausreichende Komplexität zum aktuellen Zeitpunkt aufweist, ist die Notwendigkeit für eine Umstellung nicht gegeben. Weiterführend können keine nachvollziehbaren Vorteile aus einer Umstellung gesehen werden, während Kosten durch weitere Schulungen oder externe Fachkräfte absehbar sind.
 
-Microservices sind vielschichtiger als Monolithen. Daher müssen Punkt ... beachtet werden.
-Microserves sind ideal um die Komplexität von vielseitigen Unternehmen zu beherrschen.
-Demnach muss vor der Umstellung folgende Bedingungen erfüllt sein.
+Demnach ist eine Umstellung für PluraPolit zum aktuellen Zeitpunkt nicht zu empfehlen.
 
-Diese Bedingungen treffen für PluraPolit nicht zu. Deswegen wird für PluraPolit eine Umstellung abgeraten.
-
-
-Abschnitt ... zeigt, dass die Plattform von PluraPolit eine Monolith ist, welcher teilweise Modular aufgebaut ist und vereinzelnte externe Services von AWS nutzt.
-Aus der Problemstellung geht hervor, dass ....
-Experten bewerten die Komplexität der Plattform als zu gering, um eine Notwendigkeit zu sehen Microervices umzusetzen.
-PluraPolit nutzt AWS, welches die Anforderung an Sicherheit und Infrastruktur erfüllt. Kenntnisse über den Aufbau einer solchen Infrastruktur sind jedoch nicht vorhanden.
-Die Ziele des Unternehmen, zielen darauf ab weiterführende Funktionen zu etablieren. Zum aktuellen Zeitpunkt kann jedoch kein wirtschaftlicher Mehrwerkt proknostizierbar werden.
-
-Der Mangel an Kenntniss über den Aufbau und das Verwalten einer Microservicearchitektur würde für PluraPolit bedeuten, dass entweder die Entwickler sich weiterbilden müssen oder externe Fachkräfte eingekauft werden. In beiden Fällen würde es für PluraPolit Kosten bedeuten ohne eine Komplexität des Geschäftsmodells vorleigt, die eine Aufteilung rechtwertigt.
-
-Abschnitt ... zeigt, dass die Problematik des Koppling und Koheränz auch durch ein modularen Monolithen gelöst werden kann.
-
-Die Experten empholen die Trennung zwischen Front- und Backend.
-Demnach ein erster Schritt in zu einem verteilten System.
