--- a/sections/Methodik/ergebnisse/frage2.tex
+++ b/sections/Methodik/ergebnisse/frage2.tex
@@ -1,12 +1,12 @@
 \subsubsection{Frage 2}
 \label{sec:frage2}
 
-\textit{Microservices ermöglicht es Team, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat voneinander Arbeiten können?}
+\textit{Microservices ermöglicht es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmen Bedingungen sehen Sie als notwendig, dass Teams separat voneinander Arbeiten können?}
 
 Herr Rahles fügte den Vermerk hinzu, dass die Teams stets zu einem Unternehmen gehören und nie ganz unabhängig sind.\footnote{
 \textit{\enquote{Auch diese Teams gehören zu einem Unternehmen […], das heißt unabhängig voneinander sind sie nie.}} (siehe \combref{appendix:r-15})
 }
-Auch beurteilte er, dass Teams \textit{\enquote{interdisziplinär aufgestellt sein [müssen], [damit] sie wirklich unabhängig voneinander arbeiten können}} (siehe \combref{appendix:r-16}) und wies in seinem Interview darauf, dass Teams \textit{\enquote{innerhalb [ihrer] Business Domäne [...] der Owner sein [müssen]}} (siehe \combref{appendix:r-20}).
+Auch beurteilte er, dass Teams \textit{\enquote{interdisziplinär aufgestellt sein [müssen], [damit] sie wirklich unabhängig voneinander arbeiten können}} (siehe \combref{appendix:r-16}) und wies in seinem Interview daraufhin, dass Teams \textit{\enquote{innerhalb [ihrer] Business Domäne [...] der Owner sein [müssen]}} (siehe \combref{appendix:r-20}).
 
 Herr Schlaak und Herr Troppman führten an, dass insbesondere Schnittstellen definiert und beschrieben sein müssen.\footnote{
 \textit{\enquote{Ganz wichtig ist, dass die Schnittstellen der Services entsprechend gut beschrieben sind […]}} (siehe \combref{appendix:s-13}); \textit{\enquote{[…] die Teams müssen sich einig sein, über welche Schnittstelle die Services kommunizieren.}} (siehe \combref{appendix:t-19}); \textit{\enquote{Schnittstellen nach außen müssen geklärt sein.}} ( siehe \combref{appendix:t-22})
@@ -18,10 +18,11 @@ Weiterführend wurde von Herr Troppman eine Struktur hervorgehoben, die Abläufe
 \textit{\enquote{[…] es ist einfach sinnvoll zu gucken, dass […] die Teams entsprechend des Projektmanagements richtig aufgestellt sind.}} (siehe \combref{appendix:r-22})
 }
 
-Daraus lässt sich folgern, dass:
+\label{sec:eigenverantwortlich} \label{sec:schnittstelle}
+Daraus lässt sich schlussfolgern:
 \begin{itemize}
-	\item  Strukturen notwendig sind, damit Teams separat arbeiten können,
-	\item Schnittstellen definiert und beschrieben sein müssen und
-	\item Teams zwar nie ganz unabhängig sind, aber eigenverantwortlich arbeiten.
+	\item  Strukturen sind notwendig, damit Teams separat arbeiten können.
+	\item Schnittstellen müssen definiert und beschrieben sein.
+	\item Teams sind zwar nie ganz unabhängig, arbeiten aber eigenverantwortlich.
 \end{itemize}
 
