--- a/sections/Methodik/ergebnisse/frage3.tex
+++ b/sections/Methodik/ergebnisse/frage3.tex
@@ -3,7 +3,7 @@
 
 \textit{Gibt es in Ihren Augen irgendwelche technischen Anforderungen, die PluraPolit erfüllen sollte?}
 
-Als wohl wichtigste technische Anforderung stellte sich das Monitoring heraus. So beschrieben alle drei Experten die Notwendigkeit ein Monitoring zu implementieren, welches die Kommunikation zwischen den Services überwacht (siehe \combref{appendix:t-32} und \combref{appendix:s-16}). Besonders Herr Rahles verwies auf diese Bedingung.\footnote{
+Als wichtigste technische Anforderung stellte sich das Monitoring heraus. So beschrieben alle drei Experten die Notwendigkeit ein Monitoring zu implementieren, welches die Kommunikation zwischen den Services überwacht (siehe \combref{appendix:t-32} und \combref{appendix:s-16}). Besonders Herr Rahles verwies auf diese Bedingung.\footnote{
 \textit{\enquote{Monitoring ist das A und O. Das heißt mit Anstieg der Komplexität, muss ich sicher sein, dass ich auch diese Komplexität hinreichend überblicken kann.}} (siehe \combref{appendix:r-31})
 }
 
@@ -13,7 +13,7 @@ Auch die Sicherheit wurde von Herrn Rahles angemerkt. Dabei sah er es aber als G
 
 Herr Schlaak und Herr Rahles hoben ein gut eingebautes Fehlermanagement hervor. So beschrieben beide, dass Services \textit{\enquote{vernünftige Fehlermeldungen}} zurück geben sollten (siehe \combref{appendix:s-18} und \combref{appendix:r-34}).
 
-Die technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement lassen schlussfolgern, dass Kenntnisse in der Implementierung und Managen vorhanden sein muss. Eine Aussage, die auch von Herrn Troppman bestätigt wurde.\footnote{
+Aus den technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement geht hervor, dass Kenntnisse in der Implementierung und in der Verwaltung der Infrastruktur vorhanden sein müssen. Eine Aussage, die auch von Herrn Troppman bestätigt wurde.\footnote{
 \textit{\enquote{[…] es [braucht] einen Entwickler, der sich mit dem Aufbau der Infrastruktur auskennt.}} (siehe \combref{appendix:t-33})
 }
 
