--- a/sections/Methodik/ergebnisse/frage4.tex
+++ b/sections/Methodik/ergebnisse/frage4.tex
@@ -3,18 +3,18 @@
 
 \textit{Ein Start-up zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen in der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinen Sie, dass trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?}
 
-Christoph Rahles antwortete auf diese Frage, \textit{\enquote{Da gibt es glaube ich kein Richtig oder Falsch.}} und verdeutlichte, dass die Frage immer im Kontext der wirtschaftlichen und technologischen Situation des Start-up getroffen werden muss ( siehe \combref{appendix:r-6}).
+Christoph Rahles antwortete auf diese Frage: \textit{\enquote{Da gibt es glaube ich kein Richtig oder Falsch.}} und verdeutlichte, dass die Frage immer im Kontext der wirtschaftlichen und technologischen Situation des Start-up getroffen werden muss ( siehe \combref{appendix:r-6}).
 
-Alexander Troppman vertrat die Meinung, dass Microservices grade im dynamischen Umfeld eingesetzt werden sollten. Seine Meinung begründete er damit, dass Microservices aufgrund des einfachen Austauschs von Services im dynamischen Umfeld Sinn ergeben.\footnote{
+Alexander Troppman vertrat die Meinung, dass Microservices grade im dynamischen Umfeld eingesetzt werden sollten. Seine Meinung begründete er damit, dass Microservices aufgrund des einfachen Austauschs von Services im dynamischen Umfeld Sinn ergibt.\footnote{
 \textit{\enquote{Ich kenne viele Start-ups, die von Anfang an Microservices eingesetzt haben, weil gerade Microservices so sind, dass man verschiedene Services austauschen kann. Also gerade im dynamischen Umfeld machen Microservices Sinn.}} (siehe \combref{appendix:t-5})
 }
 
 Sebastian Schlaak antwortete, dass er mit einem Monolithen anfangen würde, da man mit diesem deutlich schneller ist und führte weiter fort, dass die Vorteile von Microservices \textit{\enquote{erst in der späteren Skalierungsphase […] so richtig zum Tragen kommen}} (siehe \combref{appendix:s-21}).
 
-Die Aussage, mit einem Monolithen anzufangen, kam auch von Herr Rahles. So äußerte er sich, \textit{\enquote{dass man [meistens] mit einem Monolithen anfängt}} und später, wenn \textit{\enquote{es sehr drückend wird}}, auf Microservices umstellt (siehe \combref{appendix:r-8}).
+Die Aussage, mit einem Monolithen anzufangen, kam auch von Herrn Rahles. So äußerte er sich, \textit{\enquote{dass man [meistens] mit einem Monolithen anfängt}} und später, wenn \textit{\enquote{es sehr drückend wird}}, auf Microservices umstellt (siehe \combref{appendix:r-8}).
 
 Mit der Aussage, dass eine Umstellung zu Microservices \textit{\enquote{sich erst mittel bis langfristig [lohnt]}} (siehe \combref{appendix:t-13}), unterstützte Herr Troppman die vorherige Aussage.
 
 Sowohl Herr Rahles, als auch Herr Troppman antworteten, dass die Unternehmensziele die Entscheidung zur Umstellung beeinflussen. So verdeutliche Herr Rahles, dass die Entscheidung auch von der \textit{\enquote{Strategie der Firma}} abhängt (siehe \combref{appendix:r-12}).
 
-Nach Herrn Schlaak sollte besonders dann über eine Microservicearchitektur nachgedacht werden, wenn neue \textit{\enquote{Funktionen […] nichts mehr mit dem Kerngeschäft zu tun haben […]}} (siehe \combref{appendix:s-25}). Diese Aussage teilte ebenfalls Herr Rahles: \textit{\enquote{Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an ein Punkt kommt, […] wo man sagt, es macht Sinn, Dinge auszulagern.}} (siehe \combref{appendix:r-9}). Daraus lässt sich folgern, dass eine Umstellung zu Microservices sinnvoll ist, wenn Aufgaben aus verschiedenen Aufgabenfelder anfallen und Fachlich unterschiedlich sind. Demnach ist die Entscheidung abhängig von der Vielseitigkeit eines Unternehmens.
+Nach Herrn Schlaak sollte besonders dann über eine Microservicearchitektur nachgedacht werden, wenn neue \textit{\enquote{Funktionen […] nichts mehr mit dem Kerngeschäft zu tun haben […]}} (siehe \combref{appendix:s-25}). Diese Aussage teilte ebenfalls Herr Rahles: \textit{\enquote{Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an ein Punkt kommt, […] wo man sagt, es macht Sinn, Dinge auszulagern}} (siehe \combref{appendix:r-9}). Daraus lässt sich folgern, dass eine Umstellung zu Microservices sinnvoll ist, wenn Aufgaben aus verschiedenen Aufgabenfelder anfallen und Fachlich unterschiedlich sind. Demnach ist die Entscheidung abhängig von der Vielseitigkeit eines Unternehmens.
